extract server package from main